--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
         flutter doctor
         flutter config --no-analytics
         echo "------------------flutter pub get---------------------"
-        cd /home/runner/work/android/android/
+        cd /home/runner/work/android/android/sample_app
         pwd
         ls -la
-        # flutter pub get
-        # flutter pub upgrade --major-versions
+         flutter pub get
+         flutter pub upgrade --major-versions
         echo "------------------flutter build apk---------------------"
         flutter build apk --release --no-tree-shake-icons
 
